// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentList > should render CommentList with comments 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 2 comments
    </button>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`CommentList > should render CommentList with no comment 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;
